# Novae

./: .clang-format  .gitignore  CMakeLists.txt  README.md
shaders/: blur.fs  horz_blur.fs  mix.fs  round_rec.fs  round_rec_glow.fs  vert_blur.fs
src/: alpha_inherit.c  alpha_inherit.h  blur.c  blur.h  button.c  button.h  c32_vec.c  c32_vec.h  check_btn.c  check_btn.h  chrono.c  chrono.h  clip.c  clip.h  colors.c  colors.h  config.c  config.h  cursor.c  cursor.h  da.h  date.c  date.h  date_edit.c  date_edit.h  date_pick.c  date_pick.h  date_time_view.c  date_time_view.h  db.c  db.h  db_activity_map.c  db_activity_map.h  db_cache.c  db_cache.h  draw_opts.h  editor.c  editor.h  heatmap.c  heatmap.h  (+47 more)
